# zkp_systems_workshops

./: .gitignore  Cargo.toml  README.md  lecture1.md  lecture2.md  repomix-output.xml  rust-toolchain.toml  rustfmt.toml  typos.toml
0_zkp_architecture/: Cargo.toml  README.md
1_mathematical_toolkit/: Cargo.toml  README.md
1_mathematical_toolkit/proptest-regressions/: tests.txt
1_mathematical_toolkit/src/: tests.rs
2_fast_polynomial_arithmetic/: Cargo.toml  README.md
2_fast_polynomial_arithmetic/benches/: polynomial_multiplication.rs
2_fast_polynomial_arithmetic/src/: lib.rs  main.rs
3_polynomial_commitment_scheme/: Cargo.toml  README.md
3_polynomial_commitment_scheme/src/: error.rs  main.rs  prover.rs  types.rs  verifier.rs
4_air_constraints_design/: Cargo.toml  README.md  repomix-output.xml
4_air_constraints_design/src/: arithmetization.rs  composition.rs  deep_composition.rs  main.rs  trace.rs
5_plonk_and_hyperplonk/: Cargo.toml  README.md
prime_field/: Cargo.toml
prime_field/proptest-regressions/: tests.txt
prime_field/src/: main.rs  tests.rs
